--- a/style.css
+++ b/style.css
@@ -233,7 +233,9 @@ a:hover {
     height: 100vh;
   
   }
- 
+  tspan {
+    fill: black;
+}
   .mars-current-weather {
     padding: 2em;
     margin: 1em 1em 0 1em;
